# uuid

./: .appveyor.yml  .codecov.yml  .drone.jsonnet  .drone.star  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  build.jam  covscan.sh
.drone/: drone.sh
.github/workflows/: ci.yml
ci/: build.sh  codecov.sh  finddeps.sh
doc/: uuid.adoc  uuid.html
doc/uuid/: acknowledgements.adoc  basic_random_generator.adoc  changes.adoc  concepts.adoc  configuration.adoc  copyright.adoc  design_notes.adoc  examples.adoc  introduction.adoc  name_generator.adoc  (+15 more)
test/: CMakeLists.txt  Jamfile.v2  mock_random.cpp  mock_random.hpp  print_config_info.cpp  test_alignment.cpp  test_alignment_2.cpp  test_attribute_packed.cpp  test_bench_random.cpp  test_comparison.cpp  test_data.cpp  test_detail_endian.cpp  test_detail_random_device.cpp  test_detail_random_device_bcrypt.cpp  test_detail_random_device_cloudabi.cpp  test_detail_random_device_file.cpp  test_detail_random_device_wincrypt.cpp  test_detail_random_provider.cpp  test_detail_uuid_clock.cpp  test_entropy_error.cpp  test_from_chars.cpp  test_from_chars_2.cpp  test_from_chars_cx.cpp  test_from_chars_cx2.cpp  test_gcc_pr114865.cpp  test_hash.cpp  test_hash_value_cx.cpp  test_io.cpp  test_io_2.cpp  test_max_generator.cpp  test_md5.cpp  test_msvc_simd_bug981648.hpp  test_msvc_simd_bug981648_foo.cpp  test_msvc_simd_bug981648_main.cpp  test_name_generator.cpp  test_name_generator_md5.cpp  test_name_generator_sha1.cpp  test_random_generator.cpp  test_sha1.cpp  test_string_generator.cpp  (+18 more)
test/cmake_subdir_test/: CMakeLists.txt
(+61 files in other folders)
